--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,26 +3,36 @@
 <head>
     <title>PanGest - Catálogo</title>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Bienvenido a PanGest 🍞</h1>
+<body class="bg-light">
 
-    <h2>Empresas registradas</h2>
-    <ul>
-        <li th:each="empresa : ${empresas}">
-            <b th:text="${empresa.nombre}"></b> - 
-            <span th:text="${empresa.descripcion}"></span>
-        </li>
-    </ul>
+	<div th:replace="~{fragments/header :: header}"></div>
 
-    <h2>Productos</h2>
-    <ul>
-        <li th:each="prod : ${productos}">
-            <b th:text="${prod.nombre}"></b> - 
-            <span th:text="${prod.descripcion}"></span> 
-            (S/ <span th:text="${prod.precio}"></span>)<br/>
-            Empresa: <i th:text="${prod.empresa.nombre}"></i>
-        </li>
-    </ul>
+
+    <div class="container">
+        <div class="mb-5">
+            <h2 class="mb-3">Empresas registradas</h2>
+            <ul class="list-group">
+                <li class="list-group-item" th:each="empresa : ${empresas}">
+                    <strong th:text="${empresa.nombre}"></strong><br>
+                    <small class="text-muted" th:text="${empresa.descripcion}"></small>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <h2 class="mb-3">Productos</h2>
+            <ul class="list-group">
+                <li class="list-group-item" th:each="prod : ${productos}">
+                    <div class="fw-bold" th:text="${prod.nombre}"></div>
+                    <div class="text-muted" th:text="${prod.descripcion}"></div>
+                    <div>S/ <span th:text="${prod.precio}"></span></div>
+                    <div>Empresa: <em th:text="${prod.empresa.nombre}"></em></div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
